--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
       "import": "./lib/esm/linear-algebra/index.js",
       "require": "./lib/cjs/linear-algebra/index.js"
     },
-    "./matrix-caluclations": {
-      "import": "./lib/esm/linear-algebra/matrix-caluclations.js",
-      "require": "./lib/cjs/linear-algebra/matrix-caluclations.js"
+    "./matrix-calculations": {
+      "import": "./lib/esm/linear-algebra/matrix-calculations.js",
+      "require": "./lib/cjs/linear-algebra/matrix-calculations.js"
     },
     "./matrix": {
       "import": "./lib/esm/linear-algebra/matrix.js",
